<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:theme="@style/page71.Blood_Donation"
    tools:context=".Family_List">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/family_list"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Fam_Name"
        style="@style/page8.Blood_Donation"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:boxStrokeColor="@color/box_col"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/baseline_close_24"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="307dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Fam_ph"
        style="@style/page8.Blood_Donation"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_no"
        app:boxStrokeColor="@color/box_col"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/baseline_close_24"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:inputType="phone"
            android:textColor="@color/white"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateClickableBoundsCheck"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="307dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_fam"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85" />


</androidx.constraintlayout.widget.ConstraintLayout>